# apps/server/src/main/java/com/skkil/sync/experience/dto/data/ProjectExperienceDto.java
@@ -1,0 +1,3 @@
+package com.skkil.sync.experience.dto.data;
+
+public record ProjectExperienceDto(Long id, Long projectId, String projectName) {}
